Additional fixes in query plan